Layout the index.html

--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -7,5 +7,79 @@
 
 <!--Index Content -->
 {% block content %}
-<h1>Blog Index</h1>
+<div class="container">
+        <!--The row contains 12 cols of bootstrap-->
+        <div class="row mt-5 pt-5">
+            <!--The Left Pain: for the Menu: it takes 4 columns-->
+            <div class="col-md-4">
+                <div class="card">
+                    <div class="card-body shadow">
+                        <h3>Add a Post Form here</h3>
+                    </div>
+                </div>
+            </div>
+            <!--The Right Pain: for Post Index: it takes 8 columns-->
+            <div class="col-md-8">
+                <!--We use the card for each post-->
+                <div class="card">
+                    <div class="card-body">
+                        <!--A Post 1 -->
+                        <div class="row">
+                            <div class="col-md-4">
+                                <img src="" alt="Post Image">
+                            </div>
+                            <div class="col-md-8">
+                                <!--post 1-->
+                               <div class="card shadow my-2">
+                                    <small>28th Sept 2021</small>
+                                    <hr/>
+                                    <a class="h3" href="">Ben Post 1</a>
+                                    <p class="text-justify p-3">
+                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta illum commodi accusamus est dicta explicabo maiores architecto temporibus aperiam incidunt iure vero, fugiat quo beatae sit ullam voluptatum laboriosam ex!
+                                    </p>
+                               </div>
+                              
+                            </div>
+                        </div>
+                         <!--A Post 2-->
+                        <div class="row">
+                            <div class="col-md-4">
+                                <img src="" alt="Post Image">
+                            </div>
+                            <div class="col-md-8">
+                                <!--post 1-->
+                               <div class="card shadow my-2">
+                                    <small>28th Sept 2021</small>
+                                    <hr/>
+                                    <a class="h3" href="">Ben Post 2</a>
+                                    <p class="text-justify p-3">
+                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta illum commodi accusamus est dicta explicabo maiores architecto temporibus aperiam incidunt iure vero, fugiat quo beatae sit ullam voluptatum laboriosam ex!
+                                    </p>
+                               </div>
+                              
+                            </div>
+                        </div>
+                          <!--A Post 3-->
+                        <div class="row">
+                            <div class="col-md-4">
+                                <img src="" alt="Post Image">
+                            </div>
+                            <div class="col-md-8">
+                                <!--post 1-->
+                               <div class="card shadow my-2">
+                                    <small>28th Sept 2021</small>
+                                    <hr/>
+                                    <a class="h3" href="">Ben Post 3</a>
+                                    <p class="text-justify p-3">
+                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta illum commodi accusamus est dicta explicabo maiores architecto temporibus aperiam incidunt iure vero, fugiat quo beatae sit ullam voluptatum laboriosam ex!
+                                    </p>
+                               </div>
+                              
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
