--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -9,12 +9,17 @@
 {% block content %}
 <div class="container">
         <!--The row contains 12 cols of bootstrap-->
-        <div class="row mt-5 pt-5">
+        <div class="row pt-5">
             <!--The Left Pain: for the Menu: it takes 4 columns-->
             <div class="col-md-4">
                 <div class="card">
                     <div class="card-body shadow">
-                        <h3>Add a Post Form here</h3>
+                        <form action="POST">
+                            {% csrf_token %}
+                            {{ form }}
+                            <br/>
+                            <input class="btn btn-primary btn-block" type="submit"  value="Post">
+                        </form>
                     </div>
                 </div>
             </div>
@@ -23,6 +28,7 @@
                 <!--We use the card for each post-->
                 <div class="card">
                     <div class="card-body">
+                        {% for p in posts %}
                         <!--A Post 1 -->
                         <div class="row">
                             <div class="col-md-4">
@@ -31,52 +37,17 @@
                             <div class="col-md-8">
                                 <!--post 1-->
                                <div class="card shadow my-2">
-                                    <small>28th Sept 2021</small>
+                                    <small>{{ p.date_created }}</small>
                                     <hr/>
-                                    <a class="h3" href="">Ben Post 1</a>
+                                    <a class="h3" href="">{{ p.title }}</a>
                                     <p class="text-justify p-3">
-                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta illum commodi accusamus est dicta explicabo maiores architecto temporibus aperiam incidunt iure vero, fugiat quo beatae sit ullam voluptatum laboriosam ex!
+                                        {{ p.content|safe }}
                                     </p>
                                </div>
                               
                             </div>
                         </div>
-                         <!--A Post 2-->
-                        <div class="row">
-                            <div class="col-md-4">
-                                <img src="" alt="Post Image">
-                            </div>
-                            <div class="col-md-8">
-                                <!--post 1-->
-                               <div class="card shadow my-2">
-                                    <small>28th Sept 2021</small>
-                                    <hr/>
-                                    <a class="h3" href="">Ben Post 2</a>
-                                    <p class="text-justify p-3">
-                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta illum commodi accusamus est dicta explicabo maiores architecto temporibus aperiam incidunt iure vero, fugiat quo beatae sit ullam voluptatum laboriosam ex!
-                                    </p>
-                               </div>
-                              
-                            </div>
-                        </div>
-                          <!--A Post 3-->
-                        <div class="row">
-                            <div class="col-md-4">
-                                <img src="" alt="Post Image">
-                            </div>
-                            <div class="col-md-8">
-                                <!--post 1-->
-                               <div class="card shadow my-2">
-                                    <small>28th Sept 2021</small>
-                                    <hr/>
-                                    <a class="h3" href="">Ben Post 3</a>
-                                    <p class="text-justify p-3">
-                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta illum commodi accusamus est dicta explicabo maiores architecto temporibus aperiam incidunt iure vero, fugiat quo beatae sit ullam voluptatum laboriosam ex!
-                                    </p>
-                               </div>
-                              
-                            </div>
-                        </div>
+                        {% endfor %}
                     </div>
                 </div>
             </div>
