--- a/templates/partials/navbar.html
+++ b/templates/partials/navbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-primary bg-primary">
-  <div class="container">
-    <a class="navbar-brand text-white" href="#">BenLoggers</a>
+  <div class="container my-0 p-0" >
+    <a class="navbar-brand text-white" href="{% url 'index' %}"> BennLoggers</a>
     <button class="navbar-toggler" type="button" 
           data-bs-toggle="collapse" 
           data-bs-target="#navbarSupportedContent" 
@@ -12,14 +12,54 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active text-white" aria-current="page" href="#">Home</a>
+          <a class="nav-link active text-white" aria-current="page" href="{% url 'index' %}">Home</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link text-white" href="#">Link</a>
-        </li>
-        
+
       </ul>
+
+     
+       <ul class="navbar-nav ml-autho">
+          {% if user.is_authenticated %}
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle text-white"
+                href="#"
+                id="navbarDropdown"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                  <img
+                  src="https://i.pravatar.cc/50" 
+                  width="30px" 
+                  height="30px"            
+                  class="rounded-circle"
+                  />
+            
+                {{ user.username }}
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="#">Profile</a></li>
+                <li><a class="dropdown-item" href="#">Setting</a></li>
+                <li><hr class="dropdown-divider" /></li>
+                <li>
+                  <a class="dropdown-item" href="{% url 'member-logout' %}">Logout</a>
+                </li>
+              </ul>
+            </li>
+          {% else %} 
+            <li class="nav-item">
+              <a class="nav-link text-white" href="{% url 'member-sign-up' %}">Sign up</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-white" href="{% url 'member-login' %}">Login</a>
+            </li>
+          {% endif %}
+        </ul>      
+      
       
     </div>
+
+     
   </div>
 </nav>
