--- a/templates/members/profile.html
+++ b/templates/members/profile.html
@@ -1,4 +1,5 @@
 {% extends 'partials/base.html'%}
+{% load crispy_forms_tags %}
 <!--Page title-->
 {% block title %}
 <title>Profile</title>
@@ -63,13 +64,41 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        ...
+        <div class="row">
+          <div class="col-md-4">
+             {% if user.profile.image %}
+                  <img 
+                    src="{{ user.profile.image.url }}" 
+                    alt="Profile Img"
+                    width="100px" 
+                    height="100px"
+                    >
+              {% else %}
+                  <img
+                    src="https://i.pravatar.cc/50" 
+                    width="100px" 
+                    height="100px"            
+                    class="rounded-circle"
+                  />
+            {% endif %}
+          </div>
+          <div class="col-md-8">
+            <form method="POST" enctype="multipart/form-data" >
+              {% csrf_token %} 
+              {{ u_form|crispy }}
+              {{ p_form|crispy }}
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary btn-sm" data-bs-dismiss="modal">Close</button>
+                <button type="submit" class="btn btn-primary btn-sm">Update</button>
+              </div>
+            </form>
+          </div>
+        </div>
       </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary btn-sm" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary btn-sm">Save changes</button>
-      </div>
+     
     </div>
   </div>
 </div>
+<!--end of Edit Profile Modal-->
+
 {% endblock%}
